<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:theme="@android:style/Theme.NoTitleBar"
        android:focusableInTouchMode="true" android:weightSum="1">
    <com.adtis.fistpproj.activity.NavActivity
            android:id="@+id/nav_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        <EditText
                android:id="@+id/reg_txt_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:width="@dimen/reg_txt_width"
                android:hint="@string/reg_username"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:layout_gravity="end|top"
                android:background="@drawable/round_rect"/>
        <EditText
                android:id="@+id/reg_txt_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:width="@dimen/reg_txt_width"
                android:hint="@string/reg_email"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:layout_gravity="end|top"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_rect"
                android:layout_below="@+id/reg_txt_username"
                android:layout_alignParentStart="true"/>
        <EditText
                android:id="@+id/reg_txt_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:width="@dimen/reg_txt_width"
                android:hint="@string/reg_phone"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:layout_gravity="end|top"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_rect"
                android:layout_below="@+id/reg_txt_email"
                android:layout_alignParentStart="true"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:width="@dimen/reg_txt_width"
                android:hint="@string/reg_password"
                android:id="@+id/reg_txt_pwd"
                android:layout_marginTop="20dp"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/round_rect"
                android:layout_below="@+id/reg_txt_phone"
                android:layout_alignParentStart="true"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:hint="@string/reg_confirmpwd"
                android:inputType="textPassword"
                android:width="@dimen/reg_txt_width"
                android:id="@+id/reg_txt_confirmpwd"
                android:layout_marginTop="20dp"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/round_rect"
                android:layout_below="@+id/reg_txt_pwd"
                android:layout_alignParentStart="true"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/reg_btn"
                android:id="@+id/btn_reg"
                android:width="@dimen/reg_txt_width"
                android:background="@drawable/btn_select"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_txt_size"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_below="@+id/reg_txt_confirmpwd"
                android:layout_alignParentStart="true"/>
    </RelativeLayout>
</RelativeLayout>