<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:theme="@android:style/Theme.NoTitleBar">
    <com.adtis.fistpproj.activity.NavActivity
            android:id="@+id/nav_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <FrameLayout
            android:layout_width="329dp"
            android:layout_height="159dp"
            android:layout_gravity="center|center"
            android:layout_marginTop="100dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/login_email"
                android:textColor="@android:color/black"
                android:id="@+id/login_lbl_email"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="41dp"
                android:text="@string/login_btn"
                android:id="@+id/btn_login"
                android:width="@dimen/login_txt_width"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@drawable/btn_round_rect"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_txt_size"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/login_pwd"
                android:textColor="@android:color/black"
                android:id="@+id/login_lbl_pwd"
                android:layout_gravity="start|center_vertical"/>
        <EditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:ems="10"
                android:width="@dimen/login_txt_width"
                android:id="@+id/login_txt_pwd"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/round_rect"/>
        <EditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:width="@dimen/login_txt_width"
                android:id="@+id/login_txt_email"
                android:layout_gravity="end|top"
                android:background="@drawable/round_rect"/>
    </FrameLayout>
</LinearLayout>